--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include README.rst
 include LICENSE.txt
-recursive-include *.py *.mak
+recursive-include pyramid_auth/templates/auth *.py *.mak
 prune *.pyc
